--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -20,14 +20,15 @@ jobs:
       - name: Run tfsec (SARIF)
         uses: aquasecurity/tfsec-action@v1.0.3
         with:
-          args: --format sarif --out tfsec.sarif .
+          working_directory: .
+          additional_args: --format sarif --out tfsec.sarif
         continue-on-error: true
 
-      - name: Verify tfsec.sarif
-        run: ls -lh tfsec.sarif || echo "tfsec.sarif not found"
+      - name: Show SARIF files after tfsec
+        run: ls -lh *.sarif || true
 
       - name: Upload tfsec SARIF
-        if: always()
+        if: ${{ hashFiles('tfsec.sarif') != '' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: tfsec.sarif
@@ -46,11 +47,11 @@ jobs:
         run: checkov -d . -o sarif > checkov.sarif
         continue-on-error: true
 
-      - name: Verify checkov.sarif
-        run: ls -lh checkov.sarif || echo "checkov.sarif not found"
+      - name: Show SARIF files after Checkov
+        run: ls -lh *.sarif || true
 
       - name: Upload Checkov SARIF
-        if: always()
+        if: ${{ hashFiles('checkov.sarif') != '' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: checkov.sarif
