--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -34,7 +34,7 @@ jobs:
           sarif_file: tfsec.sarif
           category: tfsec
 
-      # ---------- Checkov ----------
+            # ---------- Checkov ----------
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -44,11 +44,13 @@ jobs:
         run: pip install checkov
 
       - name: Run Checkov (SARIF)
-        run: checkov -d . -o sarif > checkov.sarif
+        run: checkov -d . -o sarif --output-file checkov.sarif --quiet
         continue-on-error: true
 
-      - name: Show SARIF files after Checkov
-        run: ls -lh *.sarif || true
+      - name: Inspect SARIF size & head
+        run: |
+          ls -lh checkov.sarif
+          head -c 200 checkov.sarif || true
 
       - name: Upload Checkov SARIF
         if: ${{ hashFiles('checkov.sarif') != '' }}
